# beancount-plugin-tax-uk

./: .coverage  .gitignore  AGENTS.md  LICENSE.txt  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/beancount_plugin_tax_uk/: UKTaxPlugin.js  __init__.py  calculate_tax.py  fava_extension.py  models.py  rate_converter.py  spreadsheet_writer.py  tax_report.py
src/beancount_plugin_tax_uk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/beancount_plugin_tax_uk/templates/: UKTaxPlugin.html
tests/: README.md  cgtcalc_gen.py  cgtcalc_parser.py  conftest.py  show_tests_in_fava.sh  test_commission_accumulation.py  test_report.py
tests/data/: sample_HMRC_bed_and_breakfast.beancount  sample_HS284_Example_3_2021.beancount  sample_KapJI_cgc.beancount  trivial_sample.beancount
tests/data/cgtcalc_inputs/: MultipleMatches.txt
tests/data/cgtcalc_inputs_beancount/: AssetEventsNotFullSale.beancount  AssetEventsNotFullSale2.beancount  Blank.beancount  BuySellAllBuyAgainCapitalReturn.beancount  CarryLoss.beancount  HMRCExample1.beancount  MultiTransactionFees.beancount  MultipleMatches.beancount  SameDayMerge.beancount  SameDayMergeInterleaved.beancount  Simple.beancount  WithAssetEvents.beancount  WithAssetEventsBB.beancount  WithAssetEventsMultipleYears.beancount  WithAssetEventsSameDay.beancount  WithSplitBB.beancount  WithSplitS104.beancount  WithUnsplitBB.beancount  WithUnsplitS104.beancount
tests/data/output/: report_Blank.xlsx  report_BuySellAllBuyAgainCapitalReturn.pkl  report_BuySellAllBuyAgainCapitalReturn.xlsx  report_CarryLoss.pkl  report_CarryLoss.xlsx  report_HMRCExample1.pkl  report_HMRCExample1.xlsx  report_MultiTransactionFees.pkl  report_MultiTransactionFees.xlsx  report_MultipleMatches.pkl  report_MultipleMatches.xlsx  report_SameDayMerge.pkl  report_SameDayMerge.xlsx  report_SameDayMergeInterleaved.pkl  report_SameDayMergeInterleaved.xlsx  report_Simple.pkl  report_Simple.xlsx  report_WithAssetEvents.pkl  report_WithAssetEvents.xlsx  report_WithAssetEventsMultipleYears.pkl  report_WithAssetEventsMultipleYears.xlsx  report_WithAssetEventsSameDay.xlsx  report_WithSplitBB.pkl  report_WithSplitBB.xlsx  report_WithSplitS104.pkl  report_WithSplitS104.xlsx  report_WithUnsplitBB.pkl  report_WithUnsplitBB.xlsx  report_WithUnsplitS104.xlsx  test_report.pkl  test_report.xlsx  test_report_HMRC_bed_and_breakfast.pkl  test_report_HMRC_bed_and_breakfast.xlsx  test_report_HS284_Example_3_2021.pkl  test_report_HS284_Example_3_2021.xlsx  test_report_KapJI_cgc.pkl  test_report_KapJI_cgc.xlsx  test_report_trivial_sample.pkl  test_report_trivial_sample.xlsx
